--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Hard\" />
+    <Compile Remove="Hard\**" />
+    <EmbeddedResource Remove="Hard\**" />
+    <None Remove="Hard\**" />
   </ItemGroup>
 
 </Project>
